--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,15 @@
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
+body {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  background: #F8F9FA;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .App {
   text-align: center;
 }
@@ -14,18 +26,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #007BFF;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #aca9a9;
+  color: #F8F9FA;
 }
 
 .App-link {
-  color: #f63606;
+  color: #FFC107;
 }
 
 @keyframes App-logo-spin {
@@ -37,33 +49,20 @@
   }
 }
 
-body {
-  text-align: center;
-  margin: 0px;
-  padding: 0px;
-  background: #807b7b;
-  
-  /* FUENTES */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: antialiased;
-}
-
+/* Estilos para el Header */
 #header {
   height: 120px;
   width: 100%;
-  background: #aca9a9;
-  border-bottom: solid #ccc;
-  border-top: solid #f63606;
-  color: darkorange;
-  text-shadow: 0px 1px 2px#444;
-
+  background: #343A40;
+  border-bottom: solid #6C757D;
+  border-top: solid #007BFF;
+  color: #FFC107;
+  text-shadow: 0px 1px 2px #444;
 }
 
 .center {
   width: 90%;
-  margin: 0px auto;
+  margin: 0 auto;
 }
 
 .clearfix {
@@ -90,16 +89,16 @@ body {
 
 @keyframes girar {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 #brand {
   display: block;
-  margin: 0px;
+  margin: 0;
   float: left;
 }
 
@@ -107,7 +106,6 @@ body {
   width: 70%;
   float: right;
   font-size: 18px;
- 
 }
 
 #menu ul {
@@ -124,95 +122,81 @@ body {
   margin-right: 5px;
 }
 
-#menu a{
+#menu a {
   text-decoration: none;
-  color: darkorange;
+  color: #FFC107;
   transition: 300ms all;
 }
 
 #menu a:hover {
-  color: #f63606;
+  color: #007BFF;
 }
 
 .active {
-  border-bottom: 2px solid #f63606;
-  border-top: 2px solid #f63606;
+  border-bottom: 2px solid #007BFF;
+  border-top: 2px solid #007BFF;
 }
 
+/* Estilos para el slider */
 #slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 350px;
-  /*line-height: 320px;*/
-  color: #aca9a9;
+  color: #F8F9FA;
   text-shadow: 0px 0px 5px #444;
-
-  /* DEGRADADO */
-  background: rgb(255,191,112);
-  background: -moz-radial-gradient(center, ellipse cover, rgb(255,191,112) 6%, rgb(255,188,106) 14%, rgb(255,157,38) 98%, rgb(255,156,36) 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(6%, rgb(255,191,112)), color-stop(14%, rgb(255,188,106)), color-stop(98%, rgb(255,157,38)), color-stop(100%, rgb(255,156,36)));
-  background: -webkit-radial-gradient(center, ellipse cover, rgb(255,191,112) 6%, rgb(255,188,106) 14%, rgb(255,157,38) 98%, rgb(255,156,36) 100%);
-  background: -o-radial-gradient(center, ellipse cover, rgb(255,191,112) 6%, rgb(255,188,106) 14%, rgb(255,157,38) 98%, rgb(255,156,36) 100%);
-  background: -ms-radial-gradient(center, ellipse cover, rgb(255,191,112) 6%, rgb(255,188,106) 14%, rgb(255,157,38) 98%, rgb(255,156,36) 100%);
-  background: radial-gradient(ellipse at center, rgb(255,191,112) 6%, rgb(255,188,106) 14%, rgb(255,157,38) 98%, rgb(255,156,36) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffbf70', endColorstr='#ff9c24', GradientType=1 );
-  
+  background: radial-gradient(circle, rgba(0,123,255,1) 0%, rgba(0,123,255,0.8) 50%, rgba(0,123,255,0.6) 100%);
 }
 
 #slider h1 {
-  margin-top: 2.0px;
-  padding: 0px;
-  padding-top: 150px;
-  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  color: white;
 }
 
-#slider img{
-  margin-top: 25px;
-  padding: 0px;
-  padding-top: 15px;
-  text-align: center;
-  height: 50%;
-
+#slider img {
+  max-height: 50%;
+  width: auto;
+  height: auto;
 }
 
-#slider a{
-  margin-top: -125px;
+#slider a {
+  margin-top: 18%;
+  margin-right: 13%;
+  margin-left: -20%;
 }
 
+/* Estilos para el botón blanco */
 .btn-white {
-  display: block;
-  background: white;
-  color: rgb(88, 88, 88);
-  padding: 10px;
-  width: 100px;
-  height: 50px;
-  margin: 0px auto;
-  font-size: 18px;
+  background: #F8F9FA;
+  color: #343A40;
+  padding: 10px 20px;
+  font-size: 16px;
   text-transform: uppercase;
-  text-shadow: none;
   text-decoration: none;
-  line-height: 35px;
-  box-shadow: 0px 0px 5px rgb(88, 88, 88);
-  margin-top: 40px;
   border-radius: 5px;
   transition: 300ms all;
+  border: 1px solid #343A40;
 }
 
 .btn-white:hover {
-  background: #444;
-  color: white;
+  background: #343A40;
+  color: #F8F9FA;
 }
 
 #slider.slider-small {
   height: 150px;
-
 }
 
 #slider.slider-small h1 {
-  margin-top: -60px;
-  padding: 0px;
+  margin-top: -15%;
+  padding: 0;
   padding-top: 5px;
-  text-emphasis-color: #5798ce, 2px, 1px;
-  color: yellow;
+  color: #FFC107;
 }
 
 #content {
@@ -220,47 +204,45 @@ body {
   float: left;
   min-height: 650px;
   margin-right: 20px;
-
 }
 
-.content-home{
+.content-home {
   min-height: 425px !important;
 }
 
-#slidebar {
+/* Estilos para el sidebar */
+#sidebar {
   padding-top: 4%;
-  width: 25%;
-  float: left;
-
 }
 
 .slidebar-item {
-  background: #aca9a9;
+  float: left;
+  width: 25%;
+  background: #6C757D;
   padding: 20px;
   margin-top: 30px;
-
+  margin-bottom: 2%;
 }
 
 .slidebar-item h3 {
   text-transform: uppercase;
   font-size: 17px;
-  margin: 0px;
+  margin: 0;
   padding-bottom: 10px;
   margin-bottom: 10px;
-  border-bottom: 3px solid #eee;
-
+  border-bottom: 3px solid #EEE;
 }
 
 .slidebar-item .btn {
-  margin: 0px auto;
+  margin: 0 auto;
   margin-top: 10px;
-
 }
 
+/* Estilos para botones */
 .btn {
   display: block;
-  background: black;
-  color: white;
+  background: #007BFF;
+  color: #F8F9FA;
   padding: 15px;
   font-weight: bold;
   text-transform: uppercase;
@@ -271,56 +253,48 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-
 }
 
 .btn-success {
-  background: rgb(23, 150, 19);
-
+  background: #28A745;
 }
 
 .btn-success:hover {
-  background: black;
-
+  background: #218838;
 }
 
 .btn-warning {
-  background: rgb(255, 171, 0) !important;
-  color: white !important;
+  background: #FFC107 !important;
+  color: #343A40 !important;
   width: 120px;
   text-align: center;
-  border: solid 1px rgb(82, 39, 23);
-  
+  border: solid 1px #6C757D;
 }
 
-.btn-warning img{
+.btn-warning img {
   width: 40%;
   height: auto;
 }
 
 .btn-danger {
-  background: rgb(255, 0, 0) !important;
-  color: white !important;
+  background: #DC3545 !important;
+  color: #F8F9FA !important;
   text-align: center;
   float: left;
-  
 }
 
-.btn-danger img{
+.btn-danger img {
   width: 55%;
   height: auto;
-  
 }
 
 .btn-danger:hover {
-  background: black;
-
+  background: #C82333;
 }
 
 .mid-form {
   width: 50%;
-  margin: 0px auto;
-
+  margin: 0 auto;
 }
 
 .mid-form label {
@@ -330,22 +304,19 @@ body {
   margin-top: 10px;
   margin-bottom: 5px;
   font-size: 17px;
-
 }
 
 input[type="text"], textarea, input[type="file"] {
   width: 100%;
   height: 30px;
-  border: 1px solid #ccc;
+  border: 1px solid #6C757D;
   padding: 3px;
   margin-bottom: 5px;
   transition: 300ms all;
-
 }
 
-input[type="text"]:focus, textarea:focus{
-  box-shadow: 0px 0px 5px #aca9a9 inset;
-
+input[type="text"]:focus, textarea:focus {
+  box-shadow: 0px 0px 5px #007BFF inset;
 }
 
 textarea {
@@ -355,12 +326,10 @@ textarea {
   max-width: 100%;
   min-height: 150px;
   max-height: 300px;
-
 }
 
 input[type="submit"] {
   margin-top: 15px;
-
 }
 
 .padding-5 {
@@ -388,7 +357,7 @@ input[type="submit"] {
   margin-bottom: 66%;
 }
 
-.pokemon-content{
+.pokemon-content {
   text-align: justify;
   text-indent: 2%;
   white-space: pre-wrap;
@@ -398,39 +367,34 @@ input[type="submit"] {
   display: block;
   width: 170px;
   float: left;
-  
 }
 
 .radiobuttons {
   margin-top: 10px;
   margin-bottom: 10px;
   float: left;
-
 }
 
 #footer {
-  background: #aca9a9;
+  background: #343A40;
   width: 100%;
   height: 70px;
-  line-height: 70px;
-  color: darkorange;
-  text-shadow: 0px 1px 2px#444;
-
+  line-height: 40px;
+  color: #FFC107;
+  text-shadow: 0px 1px 2px #444;
 }
 
 #footer p {
-  margin: 0px;
-  padding: 0px;
-
+  margin: 0;
+  padding: 0;
 }
 
 .pokemon-item {
   width: 100%;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #EEE;
   padding-bottom: 20px;
   padding-top: 20px;
   text-align: left;
-
 }
 
 .pokemon-item .image-wrap {
@@ -439,308 +403,537 @@ input[type="submit"] {
   overflow: hidden;
   float: left;
   margin-right: 15px;
-  border: 1px solid #ccc;
-
+  border: 1px solid #6C757D;
 }
 
 .pokemon-item .image-wrap img {
   height: 100%;
   text-align: center;
-
 }
 
 .pokemon-item h2 {
   display: block;
   width: 100%;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   margin-bottom: 7px;
-
 }
 
 .pokemon-item .date {
   display: block;
   width: 100%;
-  color: rgb(122, 122, 122);
-
+  color: #6C757D;
 }
 
 .pokemon-item a {
   display: block;
   width: 15%;
   margin-left: 142px;
-  color: #444;
+  color: #007BFF;
   text-decoration: none;
   margin-top: 10px;
   transition: 300ms all;
-
 }
 
 .pokemon-item a:hover {
-  border: 1px solid #444;
+  border: 1px solid #007BFF;
   border-radius: 3px;
-  background-color: #444;
-  color: #ccc;
+  background-color: #007BFF;
+  color: #F8F9FA;
 }
 
 .subheader {
   font-size: 35px;
-  border-bottom: 1px solid #aca9a9;
+  border-bottom: 1px solid #6C757D;
   padding-bottom: 10px;
-
 }
 
 .pokemon-detail .image-wrap {
   float: none;
   width: 100%;
   height: 300px;
-  
 }
 
-.pokemon-detail .image-wrap img{
+.pokemon-detail .image-wrap img {
   width: 100%;
   height: auto;
-
 }
 
 .pokemon-detail .subheader {
   margin-top: 15px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   border: none;
-
 }
 
 .link-name {
   text-decoration: none;
-  color: white;
+  color: #F8F9FA;
   font-size: 1.3rem;
-  
 }
 
-.link-name:hover{
+.link-name:hover {
   cursor: pointer;
-  color:rgb(227, 227, 227)
-
+  color: #E3E3E3;
 }
 
+/* Estilos adicionales para el componente Search */
+.search-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.search-form input {
+  width: 100%;
+  max-width: 400px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #6C757D;
+  border-radius: 5px;
+}
+
+.search-form button {
+  width: 100%;
+  max-width: 400px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007BFF;
+  color: #F8F9FA;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.search-form button:disabled {
+  background-color: grey;
+  cursor: not-allowed;
+}
+
+/* Estilos para PokemonPage */
+.pokemon-card {
+  background-color: #F8F9FA;
+  border: none;
+}
+
+.pokemon-image {
+  width: 16rem;
+}
+
+.pokemon-details-card {
+  background-color: #F8F9FA;
+  border: none;
+}
+
+.type-badge {
+  color: white;
+  font-weight: bold;
+}
+
+.pokemon-sprite {
+  width: 13rem;
+}
+
+.section-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #6C757D;
+  padding-bottom: 5px;
+}
+
+.ability-badge, .stat-badge, .move-badge, .info-badge {
+  background-color: #6C757D;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 5px 0;
+}
 
 /* CARDS COLOURS BY TYPE */
-
 .grass {
-  background-color: rgb(38, 235, 90);
-
+  background-color: #28A745;
 }
 
 .fire {
-  background-color: rgb(235, 71, 38);
-
+  background-color: #DC3545;
 }
 
 .water {
-  background-color: rgb(38, 186, 235);
-
+  background-color: #17A2B8;
 }
 
 .electric {
-  background-color: rgb(235, 209, 38);
-
+  background-color: #FFC107;
 }
 
 .ice {
-  background-color: rgb(38, 219, 235);
-
+  background-color: #17A2B8;
 }
 
 .fighting {
-  background-color: rgb(235, 104, 38);
-
+  background-color: #DC3545;
 }
 
 .poison {
-  background-color: rgb(176, 38, 235);
-
+  background-color: #6F42C1;
 }
 
 .ground {
-  background-color: rgb(181, 131, 92);
-
+  background-color: #E0A800;
 }
 
 .flying {
-  background-color: rgb(161, 215, 230);
-
+  background-color: #6C757D;
 }
 
 .psychic {
-  background-color: rgb(219, 77, 207);
-
+  background-color: #E83E8C;
 }
 
 .ghost {
-  background-color: rgb(131, 24, 133);
-
+  background-color: #6F42C1;
 }
 
 .bug {
-  background-color: rgb(113, 209, 10);
-
+  background-color: #28A745;
 }
 
 .rock {
-  background-color: rgb(166, 87, 8);
-
+  background-color: #795548;
 }
 
 .dragon {
-  background-color: rgb(50, 24, 217);
-
+  background-color: #007BFF;
 }
 
 .normal {
-  background-color: rgb(168, 162, 157);
-
+  background-color: #6C757D;
 }
 
 .fairy {
-  background-color: rgb(255, 148, 191);
-  
+  background-color: #FFC0CB;
 }
 
 .dark {
-  background-color: #444;
-
+  background-color: #343A40;
 }
 
 .steel {
-  background-color: rgb(144, 165, 165)
+  background-color: #6C757D;
 }
 
-/* RESPONSIVE DESSING */
+/* Estilos para la página de error */
+.error-page {
+  text-align: center;
+  padding: 50px 20px;
+}
 
+.error-page .subheader {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.error-page p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+/* Estilos para la página de Acerca de */
+.card {
+  color: #343a40ff;
+}
+
+.card-title {
+  color: #FFC107;
+}
+
+.card-text {
+  color: #343a40ff;
+}
+
+.btn-primary {
+  background-color: #007BFF;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+.space-top {
+  margin-top: 20px;
+}
+
+.margin-top-7 {
+  margin-top: 7%;
+}
+
+.mb-7 {
+  margin-bottom: 7%;
+}
+
+.pb-5 {
+  padding-bottom: 5%;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.rounded {
+  border-radius: 5px;
+}
+
+/* Estilos para el Footer */
+#footer {
+  background: #343A40;
+  width: 100%;
+  height: auto;
+  color: #FFC107;
+  text-shadow: 0px 1px 2px #444;
+}
+
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-col {
+  flex: 1;
+  padding: 10px;
+  min-width: 200px;
+}
+
+.footer-list {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-title {
+  font-weight: bold;
+  font-size: 1.25rem;
+  text-align: center;
+}
+
+.footer-text {
+  text-align: center;
+}
+
+.footer-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  margin: 0 auto;
+}
+
+.logo-img {
+  width: 86px;
+  height: 86px;
+  border-radius: 50%;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .footer-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+
+.footer-icons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-icons a {
+  color: #FFC107;
+  font-size: 1.5rem;
+  margin: 0 10px;
+}
+
+.footer-icons a:hover {
+  color: #007BFF;
+}
+
+.text-reset {
+  color: inherit;
+  text-decoration: none;
+}
+
+.text-reset:hover {
+  color: inherit;
+}
+
+/* Estilos para el aviso de no resultados */
+.no-results {
+  text-align: center;
+  margin-top: 20px;
+  height: 100%;
+}
+
+.no-results-image {
+  width: auto;
+  height: 70%;
+}
+
+.no-results-text {
+  font-size: 1.5rem;
+  font-style: italic;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+/* RESPONSIVE DESIGN */
 @media (max-width: 1250px) {
   .center {
-      width: 95%;
-
+    width: 95%;
   }
 
   #menu ul {
-      width: auto;
-
+    width: auto;
   }
+
+  #slider .slider-small h1 {
+    margin-top: -35%;
+    padding-top: 35px;
+  }
+
 
 }
 
 @media (max-width: 1050px) {
   #logo {
-      width: 265px;
-
+    width: 265px;
   }
+
+  #slider .slider-small h1 {
+    margin-top: -35%;
+    padding-top: 35px;
+  }
+
 
 }
 
-@media (max-width: 740px) {
+@media (max-width: 760px) {
   .center {
-      width: 85%;
-      
+    width: 85%;
   }
 
   #logo {
-      float: none;
-      width: 245px;
-      margin: 0px auto;
-      margin-top: 20px;
-
+    float: none;
+    width: 245px;
+    margin: 0 auto;
+    margin-top: 20px;
   }
 
   #menu, #menu ul {
-      clear: both;
-      float: none;
-      width: 100%;
-      margin: 0px;
-      padding: 0px;
-      line-height: 43px;
-
+    clear: both;
+    float: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    line-height: 43px;
   }
 
   #content {
-      float: none;
-      width: 95%;
-      margin: 0px auto;
-
+    float: none;
+    width: 100%;
+    margin: 0 auto;
   }
 
-  #sidebar {
-      float: none;
-      width: 98%;
-      margin: 0px auto;
-      margin-bottom: 7%;
-
+  .slidebar-item {
+    float: none;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 7%;
   }
 
-  #slider h1{
-      padding-top: 115px;
-      font-size: 25px;
+  #slider .slider-small h1 {
+    margin-top: -35%;
+    padding-top: 35px;
+  }
 
+  #slider h1 {
+    padding-top: 115px;
+    font-size: 25px;
   }
 
   .mid-form {
-      width: 70%;
-      
+    width: 70%;
   }
 
-
+  .footer-row {
+    display: block;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
 }
 
 @media (max-width: 500px) {
   #header {
-      min-height: 130px;
-      overflow: hidden;
-
+    min-height: 130px;
+    overflow: hidden;
   }
 
   #menu, #menu ul {
-      line-height: 50px;
-
+    line-height: 50px;
   }
 
   #menu ul li {
-      margin-left: 7px;
-      margin-right: 7px;
-
+    margin-left: 7px;
+    margin-right: 7px;
   }
 
   #slider {
-      height: 180px;
-
+    height: 180px;
   }
 
   #slider h1 {
-      font-size: 19px;
-      padding-top: 30px;
-
+    font-size: 19px;
+    padding-top: 30px;
   }
 
   #slider .btn-white {
-      margin-top: -35px;
-
+    margin-top: -35px;
   }
 
   #slider .slider-small {
-      height: 100px;
-
+    height: 100px;
   }
 
-  #slider .slider-small h1{
-      padding-top: 35px;
+  #slider .slider-small h1 {
+    margin-top: -35%;
+    padding-top: 35px;
+  }
 
+  .slidebar-item {
+    float: none;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 7%;
+  }
+
+  .footer-row {
+    display: block;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
 }
 
-
-/* UTILITYS */
-
+/* UTILITY CLASSES */
 .display-flex {
   display: flex;
 }
@@ -771,10 +964,10 @@ input[type="submit"] {
 }
 /* Fonts */
 .text-primary {
-  color: #293DCB;
+  color: #007BFF;
 }
 .text-secondary {
-  color: #919191;
+  color: #6C757D;
 }
 .text-center {
   text-align: center;
@@ -844,4 +1037,3 @@ input[type="submit"] {
 .progress.percent-40 {
   width: 40%;
 }
-
